# qiangheng

./: .gitignore  .gitmodules  .yamllint.yml  AGENTS.md  FILES.md  HanZiNetwork.dot  Makefile  README.md  README.txt  RELEASE.txt  U4E00-U9FA6.txt  cangjie.txt  char.py  chardesc.py  charinfo.py  convertTable.py  gen-code.py  im-cangjie.lyx  im-dayi.lyx  im-guixie.lyx  im.py  license.txt  macro.lyx  platform.py  pyproject.toml  pytest-ar.ini  pytest-bs.ini  pytest-cj.ini  pytest-dc.ini  pytest-dy.ini  pytest-fc.ini  pytest-zm.ini  qhparser.py  qiangheng.py  readme.txt  release.txt  source.lyx  tox.ini
README/: FourCroner.md
character/: ARCharInfo.py  BSCharInfo.py  CJCharInfo.py  CharDesc.py  CharDescriptionManager.py  CharInfo.py  DYCharInfo.py  HanZiNetwork.py  Operator.py  OperatorManager.py  RearrangementManager.py  TemplateDesc.py  ZMCharInfo.py
charinfo/: Bopomofo.txt  BopomofoExt.txt  CJK.txt  CJKpunct.txt  FullASCIIpunct.txt  Hiragana.txt  Katakana.txt  U20000-U2A6DF.txt  U3400-U4DB5.txt  U4E00-U9FA6.txt
description/: CharDesc.py  CharDescriptionManager.py  CharacterDescription.py  TemplateDesc.py
doc/: goto_qiangheng.html  install.txt  license.txt  qiangheng.dia  readme.txt  release.txt
font/: license.txt  single.fnt  xr.fnt
fontforge/: fontforge-20110222.patch
hanzi/: HanZiNetwork.py
im/: Array.py  BSCharInfo.py  Boshiamy.py  CangJie.py  CharInfo.py  DaYi.py  IM.py  IMMgr.py  NoneIM.py  TableIM.py  ZhengMa.py  im.py.bak
libs/: fastyaml.py
operatorinfo/: OperatorInfo.py  RearrangeInfo.py
samples/: Sample.md  adjust.yaml
scripts/: merge.py  (+4 more)
(+782 files in other folders)
