[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qiangheng"
version = "0.40"
description = "Dynamic input method table generator for CJK characters"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "瑲珩 Contributors" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lxml",
    "ruamel.yaml",
    "injector",
    "ply",
    "numpy",
    "pydantic",
    "Xie @ https://github.com/xrloong/Xie/releases/download/v0.1.5/Xie-0.1.5-py3-none-any.whl",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.uv]
# uv-specific configuration
